--- a/MultiTracking/Track/Base.lproj/Tracking Map Main.storyboard
+++ b/MultiTracking/Track/Base.lproj/Tracking Map Main.storyboard
@@ -39,6 +39,57 @@
             </objects>
             <point key="canvasLocation" x="132" y="96.798029556650249"/>
         </scene>
+        <!--Update View Controller-->
+        <scene sceneID="fFg-Hc-Mep">
+            <objects>
+                <viewController storyboardIdentifier="updateViewController" id="AC0-Cj-dLh" customClass="updateViewController" customModule="MultiTracking" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bsq-5X-T2Q">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="lati" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lw4-qk-Lgq">
+                                <rect key="frame" x="20" y="101" width="335" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="long" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xfX-1I-9D0">
+                                <rect key="frame" x="20" y="156" width="335" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ORX-X8-sTO">
+                                <rect key="frame" x="20" y="251" width="335" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="58" id="z8L-rc-K7D"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="update"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="fYk-3L-97X"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="lw4-qk-Lgq" firstAttribute="leading" secondItem="fYk-3L-97X" secondAttribute="leading" constant="20" id="5RD-Ky-Otd"/>
+                            <constraint firstItem="ORX-X8-sTO" firstAttribute="trailing" secondItem="xfX-1I-9D0" secondAttribute="trailing" id="9Th-lt-8Lb"/>
+                            <constraint firstItem="xfX-1I-9D0" firstAttribute="top" secondItem="lw4-qk-Lgq" secondAttribute="bottom" constant="21" id="IrK-68-Nvx"/>
+                            <constraint firstItem="ORX-X8-sTO" firstAttribute="top" secondItem="xfX-1I-9D0" secondAttribute="bottom" constant="61" id="KRn-HS-FXu"/>
+                            <constraint firstItem="lw4-qk-Lgq" firstAttribute="top" secondItem="fYk-3L-97X" secondAttribute="top" constant="57" id="U6u-87-rVh"/>
+                            <constraint firstItem="xfX-1I-9D0" firstAttribute="leading" secondItem="lw4-qk-Lgq" secondAttribute="leading" id="a7Y-Xj-mOf"/>
+                            <constraint firstItem="fYk-3L-97X" firstAttribute="trailing" secondItem="lw4-qk-Lgq" secondAttribute="trailing" constant="20" id="gHL-7E-vvy"/>
+                            <constraint firstItem="xfX-1I-9D0" firstAttribute="trailing" secondItem="lw4-qk-Lgq" secondAttribute="trailing" id="ifB-Ud-DzN"/>
+                            <constraint firstItem="ORX-X8-sTO" firstAttribute="leading" secondItem="xfX-1I-9D0" secondAttribute="leading" id="sQM-uF-DnJ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="latiTextFeild" destination="lw4-qk-Lgq" id="IFD-s9-cDb"/>
+                        <outlet property="loginButton" destination="ORX-X8-sTO" id="Grm-4c-COb"/>
+                        <outlet property="longTextField" destination="xfX-1I-9D0" id="Zl5-WX-VgO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jTm-lB-T3R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1036" y="96.798029556650249"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
